smplify-x fitting on panoptic

--- a/cfg_files/fit_smplx.yaml
+++ b/cfg_files/fit_smplx.yaml
@@ -17,6 +17,7 @@ use_joints_conf: True
 use_pca: True
 use_hands: True
 use_face: True
+use_face_contour : True
 flat_hand_mean: False
 # The number of mixture components for the pose prior
 num_gaussians: 8
